# totoro-code

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
atom/: __init__.py  __main__.py  cli.py  colors.py  diff.py  hotkey.py  input.py  orchestrator.py  pane.py  skills.py  status.py  tui.py  utils.py
atom/commands/: registry.py
atom/config/: schema.py  settings.py  setup.py
atom/core/: agent.py  models.py
atom/layers/: __init__.py  auto_dream.py  context_compaction.py  stall_detector.py
atom/session/: __init__.py  manager.py  restore.py
atom/tools/: fetch_url.py  web_search.py
atom_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
built-in/skills/init/: SKILL.md
built-in/skills/remember/: SKILL.md
built-in/skills/skill-creator/: SKILL.md
totoro/: __init__.py  __main__.py  cli.py  colors.py  diff.py  hotkey.py  input.py  markdown.py  orchestrator.py  pane.py  skills.py  status.py  tui.py  utils.py
totoro/commands/: registry.py
totoro/config/: schema.py  settings.py  setup.py
totoro/core/: agent.py  models.py
totoro/layers/: __init__.py  _token_utils.py  auto_dream.py  context_compaction.py  sanitize.py  stall_detector.py  subagent_hitl.py
totoro/session/: __init__.py  manager.py  restore.py
totoro/tools/: __init__.py  ask_user.py  bash.py  fetch_url.py  git.py  web_search.py
