[project]
name = "totoro-agent"
version = "0.1.0"
description = "Totoro: Advanced CLI Coding Agent built on DeepAgents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4",
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-openai>=1.0",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "prompt_toolkit>=3.0",
    "langgraph-checkpoint-sqlite>=3.0",
]

[project.scripts]
totoro = "totoro.cli:main"

[tool.setuptools.packages.find]
include = ["totoro*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
